RESTful go server. Dockerized
